plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.9'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.soldesk'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {

	// thymeleaf 레이아웃 상속
	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.4.0'
	// querydsl
	implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
	implementation 'com.querydsl:querydsl-apt:5.1.0:jakarta'
	implementation 'com.querydsl:querydsl-core:5.1.0'
	// 소셜로그인(프로젝트 생성 시 추가 가능)
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	// 썸네일
	implementation 'net.coobird:thumbnailator:0.4.21'
	
	// entity <=> dto 서로 왔다갔다.
	implementation 'org.modelmapper:modelmapper:3.2.6'
	// 3.x => spring boot 4.x 버전만 가능(swagger-ui)
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.15'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
